--- a/后台/public/index.html
+++ b/后台/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>内容营销中心</title>
+  <title>内容中心</title>
   <!--引入思源黑体字体-->
   <link rel="stylesheet" href="/font.css">
   <!--<link rel="icon" href="<%= BASE_URL %>logo.png">-->
